# llm-instrument

./: .gitignore  CMakeLists.txt  README.md
include/core/: metrics.h  ring_buffer.h  snapshot.h
include/hooks/: hook_manager.h  model_runner.h
include/tui/: mock_producer.h  tui_app.h
src/: cMakeLists.txt  main.cpp
src/core/: metrics.cpp  ring_buffer.cpp  snapshot.cpp
src/hooks/: hook_manager.cpp  model_runner.cpp
src/tui/: tui_app.cpp
tests/: cMakeLists.txt  mock_producer.cpp  mock_producer.h  test_hook_manager.cpp  test_metrics.cpp  test_ring_buffer.cpp
